add muParser to read a function from a file and rm .o file

--- a/firstAssignment/parameters.pot
+++ b/firstAssignment/parameters.pot
@@ -1,7 +1,10 @@
 #--------------------------------------------------
 # Data File For CrankNicolson Method
 #--------------------------------------------------
-
+[function]
+	f=-t*exp(-y)
+	df=t*exp(-y)
+	[../]
 [time]
 	T = 1
 	[../]
@@ -11,4 +14,3 @@
 [initial_condition]
 	y_0 = 0
 	[../]
-
